# ai-agency-platform

./: .env.langfuse  .env.langfuse.template  .env.phase1  .env.phase1.template  .env.production.template  .env.production.webhook  .env.security.template  .env.template  .gitignore  ARCHITECTURE.md  CI_OPTIMIZATION_SUMMARY.md  CLAUDE.md  CRITICAL_TDD_VIOLATION_REPORT.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_RESOLUTION_SUMMARY.md  Makefile  Market-Validation-Methodology.md  Market-Validation-Trilogy-Executive-Summary.md  PERFORMANCE_FRAMEWORK_IMPLEMENTATION_REPORT.md  PERFORMANCE_TESTING_GUIDE.md  PERFORMANCE_TESTING_SUMMARY.md  PHASE_1_CRITICAL_PATH.md  PHASE_2_COMPLETE_DEPLOYMENT.md  PRODUCTION_OPERATIONS_RUNBOOK.md  Phase-2-Competitive-Analysis-Report.md  README-security-api.md  README.md  RESPONSE_FIRST_INTERACTION.MD  SECURITY_DEPLOYMENT_AUTHORIZATION.md  SECURITY_VALIDATION_SUMMARY.md  TDD_CRITICAL_FIXES.md  TROUBLESHOOTING_GUIDE.md  User-Persona-Validation-Report.md  VOICE_ANALYTICS_SYSTEM.md  VOICE_INTEGRATION_DEPLOYMENT.md  Value-Proposition-Testing-Report.md  WEBHOOK_DEPLOYMENT_DELIVERABLES.md  WEBHOOK_EA_TESTS.md  WHATSAPP_BUSINESS_DEPLOYMENT.md  (+39 more)
.claude/: BEHAVIORAL_ENFORCEMENT_CONFIG.md  DIRECT_SDK_INTEGRATION_PLAN.md  UNIFIED_TODO_WORKFLOW_TEMPLATES.md
.claude/agents/: 00_subagent-context-manager.md  01_product-design-agent.md  02_infrastructure-devops-agent.md  03_test-qa-agent.md  04_ai-ml-engineer.md  05_security-engineer.md  AGENT_REORGANIZATION_SUMMARY.md  ai-ml-engineer.md  ai-specialist.md  api-developer.md  devops-engineer.md  full-stack-engineer.md  infrastructure-devops-agent.md  infrastructure-engineer.md  product-design-agent.md  product-manager.md  qa-engineer.md  security-engineer.md  subagent-context-manager.md  technical-lead.md  test-agent-context.md  test-qa-agent.md  ui-design-expert.md  ux-design-engineer.md
.do/: app-production.yaml  app.yaml
.do/environments/: development.yaml  production.yaml  staging.yaml
.do/landing-page/: app.yaml
.github/workflows/: ci.yml  performance-testing.yml  phase2-security-validation.yml  production-deployment.yml  webhook-ci-cd.yml  webhook-pr-validation.yml
.omc/state/: hud-state.json  hud-stdin-cache.json
alembic/: env.py
alembic/versions/: 10c5d1b838c1_conversation_intelligence.py  156127bc0bf1_initial_schema_conversations_messages.py  20260402_a1c0e7f9b3d2_conversations_base.py  20260402_b2d4f8e1a6c5_conversation_intelligence.py
api/: chat_api.py  secure_chat_api.py
config/: claudia-cc-agents.json  infrastructure-agents-config.json
config/clickhouse/: init.sql
config/langfuse/: init.sql
config/mcphub-integration/: agent-security-mapping.json  existing-infrastructure-mapping.json  mcphub-schema.sql  updated-groups-config.json
config/monitoring/: alertmanager.yml  prometheus.yml
config/nginx/: security-hardened.conf  security-proxy.conf  security_checks.conf
config/postgres/: customer-init.sql  init-multiple-dbs.sql
config/production/: deployment-config.yml
config/redis/: redis.conf
config/security/: customer-policies.yaml  safety-policies.yaml
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.svelte  app.css  main.ts
data/qdrant/: raft_state.json
deploy/: README.md  production_infrastructure.yml
deploy/config/: security-policies.json  vault-policies.hcl
deploy/kubernetes/: customer-template.yaml  namespace.yaml  shared-infrastructure.yaml
deploy/monitoring/: production-monitoring.yaml
docker/: README.md
docs/: META_DEVELOPER_SETUP_GUIDE.md  META_TECH_PROVIDER_APPLICATION.md  PERSONALITY_ENGINE_ARCHITECTURE.md  PRODUCTION_CODE_VERIFICATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_ZEN_STATE_FINAL_REPORT.md  PROJECT_ZEN_STATE_WEEK2_REPORT.md  README.md  VOICE_INTEGRATION_ROADMAP.md  WHATSAPP-QUICK-START.md  WHATSAPP_CALLING_IMPLEMENTATION.md  WHATSAPP_SYSTEM_STATUS.md  customer-ea-onboarding.md
frontend/: index-es.html  index.html  voice-interface.html
knowledge/: README.md
scripts/: README.md  db_migrate.py  deploy-client-ea.sh  deploy-whatsapp-phase2.sh  deploy_landing_page.sh  deploy_production_webhook.sh  deploy_webhook_production.py  dev-whatsapp-start.sh  dev-whatsapp-stop.sh  dev_server.py  enable_whatsapp_calling.py  generate_openapi.py  health_check.py  infrastructure-health-check.sh  infrastructure-health-monitor.sh  infrastructure-integration-report.sh  init-communication-gateways.sh  initialize-langfuse.sh  manage_webhook_environments.py  migrate_personality_schema.py  migrate_phase2.py  mutation_probe.sh  phase-1-start.sh  production_deployment_orchestrator.py  quick_test.sh  rollback_webhook_deployment.sh  run_essential_tests.py  run_phase2_migration.sh  run_semantic_evaluation_demo.py  run_sla_validation_suite.py  run_tests.sh  scale_performance_validator.py  security_validation_suite.py  seed_dashboard_auth.py  seed_data.py  set_customer_secret.py  setup_dev.sh  setup_personal_communications.py  setup_whatsapp_calling.py  setup_whatsapp_webhook.py  (+17 more)
src/: __init__.py  attention_span.py  customer_ea_manager.py  human_in_loop.py  voice_integration_system.py
src/agents/: context.py  (+7 more)
templates/: __init__.py  appointment_scheduling.json  appointment_scheduling_meta.json  customer_onboarding.json  customer_onboarding_meta.json  email_followup.json  email_followup_meta.json  invoice_generation.json  invoice_generation_meta.json  lead_management.json  lead_management_meta.json  report_generation.json  report_generation_meta.json  social_media_automation.json  social_media_automation_meta.json  template_registry.py  template_validator.py
tests/: PERFORMANCE_MIGRATION_SUMMARY.md  PERFORMANCE_SLA_STANDARDS.md  README.md  conftest.py  mutation_test.py  test_basic_functionality.py  test_fixture_isolation_verification.py  test_integration_docker.py  test_meta_embedded_signup.py  test_performance_sla_framework.py  test_personality_engine.py  test_phase2_database_schema.py
webhook-service/: Procfile  app.py  app_complex.py  customer_ea_manager.py  requirements.txt
(+598 files in other folders)
