[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agency-platform"
version = "2.0.0"
description = "AI Agency Platform - Executive Assistant System"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "AI Agency Platform Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "redis",
    "celery",
    "httpx",
    "aiohttp",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dotenv",
    "langchain",
    "langchain-openai",
    "openai",
    "anthropic",
    "elevenlabs",
    "twilio",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio", 
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]
analytics = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "jupyter",
]
performance = [
    "memory-profiler",
    "py-spy",
    "locust",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[project.scripts]
run-essential-tests = "scripts.testing.run_essential_tests:main"
run-performance-tests = "scripts.testing.test_performance_sla:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "performance: marks tests as performance tests",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "elevenlabs.*",
    "twilio.*",
    "langchain.*",
    "anthropic.*",
    "openai.*",
]
ignore_missing_imports = true