[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "ai-agency-platform"
version = "0.1.0"
description = "Multi-agent AI agency platform with Executive Assistant orchestration"
requires-python = ">=3.12,<3.14"
license = {text = "Proprietary"}
authors = [
    {name = "AI Agency Platform Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]

# Runtime dependencies — derived from actual imports in src/**/*.py
dependencies = [
    # AI / LLM core
    "openai>=1.10.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.26",

    # Web / API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",

    # Persistence
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis[hiredis]>=5.0.0",

    # HTTP clients
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "aiofiles>=23.0.0",

    # Integrations
    "twilio>=8.0.0",
    "docker>=6.0.0",

    # Security
    "python-jose[cryptography]>=3.3.0",

    # Observability
    "structlog>=23.2.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
]

[dependency-groups]
dev = [
    # Test framework
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-benchmark>=4.0.0",
    # Test data & mocking
    "faker>=19.0.0",
    "factory-boy>=3.3.0",
    "responses>=0.23.0",
    "fakeredis>=2.20.0",
    "hypothesis>=6.88.0",
    # Coverage
    "coverage[toml]>=7.3.0",
    "asgi-lifespan>=2.1.0",
]

[project.optional-dependencies]

# Heavy optional deps referenced in requirements files but not in src/ imports.
# Install as needed: pip install -e ".[evaluation]"
evaluation = [
    "anthropic>=0.8.0",
    "tiktoken>=0.5.0",
    "nltk>=3.8.0",
    "rouge-score>=0.1.2",
]

[tool.hatch.build.targets.wheel]
# Package lives at top level — `src` is the package name, not a source directory.
# This supports the established import pattern `from src.agents.executive_assistant import ...`
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src" = "src"

# ---------------------------------------------------------------------------
# pytest configuration (migrated from pytest.ini)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--timeout=30",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests requiring services",
    "acceptance: End-to-end acceptance tests with scenarios",
    "agent_test: Tests using AI agent evaluation frameworks",
    "evaluation: Tests using LLM/Agent judges for evaluation",
    "performance: Performance benchmark tests",
    "conversation: Conversational AI testing",
    "scenario: Scenario-driven testing",
    "slow: Tests that take longer than 10 seconds",
    "mock: Tests using mocked services",
    "real_api: Tests requiring real API calls (OpenAI, etc.)",
    "memory: Tests for memory and context persistence",
    "cross_channel: Tests for cross-channel conversation continuity",
    "e2e: End-to-end tests",
    "voice_performance: Voice latency benchmarks",
    "provisioning_performance: Customer provisioning benchmarks",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "AI Agency Platform - Executive Assistant Coverage"
